// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package types;

/// The unique identifier for a module on the chain.
message ModuleId {
    bytes address = 1;
    string name = 2;
}
